clusters/cl01/core/networking/traefik/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: networking
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "web"
    hajimari.io/appName: "traefik"

    traefik.ingress.kubernetes.io/router.middlewares: "networking-external-auth@kubernetescrd" 
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"    

    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"

    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "home.${SECRET_DOMAIN}"
   

spec:
  tls:
    - hosts:
        - "traefik.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-tls"
  rules:
    - host: "traefik.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
          - path: /akprox
            pathType: Prefix
            backend: 
              service:
                name: authentik-embedded-outpost.security
                port:
                  number: 9000
